--- a/style.css
+++ b/style.css
@@ -2,11 +2,26 @@
   border: 1px solid red;
 }
 
-body {
+body,
+h1,
+h2,
+p {
   padding: 0;
   margin: 0;
+  font-family: "Roboto";
 }
 
+p {
+  font-size: 0.8rem;
+  text-align: center;
+}
+
+@font-face {
+  font-family: "Roboto";
+  src: url("./policy/Roboto-Regular.ttf");
+}
+
+/* ******************** HEADER ************************ */
 header {
   display: flex;
   align-items: center;
@@ -16,12 +31,12 @@ header {
 
 #logo {
   background: url("./images/logo.png") center/cover;
-  width: 25%;
+  width: 30%;
   height: 100%;
 }
 
 #nav {
-  width: 20%;
+  width: 25%;
   height: 100%;
   display: flex;
   align-items: center;
@@ -30,4 +45,87 @@ header {
 
 #nav a {
   padding-left: 15%;
+  font-size: 0.75rem;
+  width: 25%;
+  text-decoration: none;
+  color: black;
+}
+
+/* ************************ PRESENTATION ****************** */
+#presentation {
+  height: 300px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  background: url("./images/backgroung_image.jpg") center/cover;
+}
+#logoLong {
+  position: relative;
+  height: 40px;
+  width: 150px;
+  margin-bottom: 20px;
+  background: url("./images/logo_long.png") center/cover;
+}
+
+h1 {
+  color: white;
+  font-size: 140%;
+}
+
+/* ************************ CONTENT **************** */
+#content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#contentText {
+  margin: 15px 0;
+  padding: 15px 0;
+  width: 60%;
+}
+
+#contentDraw {
+  display: flex;
+  width: 60%;
+  margin-bottom: 20px;
+  /* height: 150px; */
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  /* width: 33%; */
+  align-items: center;
+  justify-content: space-around;
+}
+
+img {
+  width: 40px;
+}
+
+h2 {
+  font-size: 0.9rem;
+  text-transform: uppercase;
+  margin: 0 10px;
+}
+
+.cardText {
+  margin: 0 10%;
+  position: relative;
+
+  word-wrap: break-word;
+  /* overflow: auto; */
+  height: 40%;
+}
+
+.cardText p {
+  font-size: 0.5rem;
+  text-align: center;
+  /* position: relative; */
+}
+
+#commentary {
+  width: 50%;
 }
